--- a/grid.html
+++ b/grid.html
@@ -15,11 +15,11 @@
     
     <div class="container">
 
-       <a href="" style="text-decoration: none;">
+       <!-- <a href="" style="text-decoration: none;">
         <div class="cm-item">
           GRID1
         </div>
-      </a>
+      </a> -->
      
       <a href="" style="text-decoration: none;">
         <div class="cm-item">
